Farmer Shop Create and Other Functionality To manage Shop

--- a/Areas/Customer/Views/UserProfile/Deshboard.cshtml
+++ b/Areas/Customer/Views/UserProfile/Deshboard.cshtml
@@ -35,6 +35,11 @@
         UserRole = "Customer";
     }
 
+    if (User.IsInRole("Farmer"))
+    {
+        UserRole = "Farmer";
+    }
+
 }
 
 @inject SignInManager<IdentityUser> SignInManager
@@ -142,6 +147,16 @@
                             <dt class="col-sm-4">Other Setting:</dt>
                             <dd class="col-sm-8">   <a asp-area="Identity" class="btn btn-danger" style="margin-left:10px" asp-page="/Account/Manage/ChangePassword" title="Manage"> Password Section</a> </dd>
                         }
+                        @if (User.IsInRole("Farmer"))
+                        {
+
+                            <dt class="col-sm-4">Manage Shop:</dt>
+                            <dd class="col-sm-8"> <a asp-area="Farmer" style="margin-left:10px" class="btn btn-info" asp-controller="FarmerShop" asp-action="Index" class="nav-link">Manage Shop</a> </dd>
+                            <dt class="col-sm-4">Other Setting:</dt>
+                            <dd class="col-sm-8">   <a asp-area="Identity" class="btn btn-danger" style="margin-left:10px" asp-page="/Account/Manage/ChangePassword" title="Manage"> Password Section</a> </dd>
+                        }
+
+
                         else if (User.IsInRole("Customer"))
                         {
                          
