--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -114,6 +114,13 @@
                                     </li>
 
                                 }
+                                 @if (userRole == "Farmer")
+                                {
+                                      <li>
+                                        <a asp-area="Farmer"   asp-controller="FarmerShop" asp-action="Index" class="nav-link">Manage Shop</a>
+                                    </li>
+                                
+                                }
 
                                 @if (userRole == "Customer")
                                 {
