--- a/Areas/Customer/Views/User/Index.cshtml
+++ b/Areas/Customer/Views/User/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿﻿@using OnlineShop.Models;
+@using Microsoft.AspNetCore.Identity
+@inject UserManager<IdentityUser> _userManager
 @model IEnumerable<ApplicationUser>
 @{
     ViewData["Title"] = "Index";
@@ -26,6 +28,7 @@
             </th>
             <th>Email</th>
             <th>Phone Number</th>
+           <th>Role</th>
             <th>Status</th>
             <th></th>
             <td></td>
@@ -35,11 +38,14 @@
         </tr>
         @foreach (var item in Model)
         {
+            var userRoles = await _userManager.GetRolesAsync(item);
+            var roles = string.Join(", ", userRoles);
             <tr>
                 <td>@item.FirstName @item.LastName</td>
                 <td>@item.UserName</td>
                 <td>@item.Email</td>
                 <td>@item.PhoneNumber</td>
+                <td>@roles</td>
                 @if (item.LockoutEnd > DateTime.Now && item.LockoutEnd != null)
                 {
                     <td >Inactive </td>
