--- a/Areas/Farmer/Views/FarmerShop/AddProduct.cshtml
+++ b/Areas/Farmer/Views/FarmerShop/AddProduct.cshtml
@@ -5,7 +5,7 @@
 <br />
 
 <h3 class="text-info">Add New Product</h3>
-<form asp-action="Create" method="post" enctype="multipart/form-data">
+<form asp-action="AddProduct" method="post" enctype="multipart/form-data">
 
     <div class="p-4 rounded border">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -70,7 +70,7 @@
             </div>
             <div class="col-lg-5">
                 <select asp-for="ProductTypeId" asp-items="ViewBag.productTypeId" class="form-control"></select>
-               
+
             </div>
             <span asp-validation-for="ProductTypeId" class="text-danger"></span>
         </div>
@@ -81,7 +81,7 @@
             </div>
             <div class="col-lg-5">
                 <select asp-for="SpecialTagId" asp-items="ViewBag.TagId" class="form-control"></select>
-              
+
             </div>
             <span asp-validation-for="SpecialTagId" class="text-danger"></span>
         </div>
@@ -95,23 +95,12 @@
             </div>
             <span asp-validation-for="IsAvailable" class="text-danger"></span>
         </div>
-
-        <div class="form-group row">
-            <div class="col-lg-2">
-                <label asp-for="PreservationRequired"></label>
-            </div>
-            <div class="col-lg-5">
-                <input asp-for="PreservationRequired" class="" type="checkbox" />
-            </div>
-            <span asp-validation-for="PreservationRequired" class="text-danger"></span>
-        </div>
-
         <div class="form-group">
             <input type="submit" class="btn btn-primary" value="Save" />
             <a asp-action="Index" class="btn btn-success">Back to List</a>
         </div>
 
- 
+
     </div>
     <div class="col-lg-2"></div>
 </form>
