--- a/Areas/Farmer/Views/FarmerShop/Index.cshtml
+++ b/Areas/Farmer/Views/FarmerShop/Index.cshtml
@@ -61,7 +61,7 @@
                         </th>
 
                         <th>
-                            <label>Description</label>
+                            <label>Need Preservation</label>
                         </th>
                         <th>
                             <label>Quantity</label>
@@ -70,25 +70,32 @@
                 </thead>
 
                 <tbody>
-                    @foreach (var item in Model.Products)
+                    @if (Model.Products != null)
+                    {
+                        @foreach (var item in Model.Products)
+                        {
+                            <tr>
+                                <td><img src="~/@item.Image" style="max-width: 50px; max-height: 50px;" /></td>
+                                <td>@item.Name</td>
+                                <td>@item.Price</td>
+                                <td>@item.IsAvailable</td>
+                                <td>@item.ProductTypes.ProductType</td>
+                                <td>@item.PreservationRequired</td>
+                                <td>@item.Quantity</td>
+                                <td>
+                                    <partial name="_ButtonPartial" model="@item.Id" />
+                                </td>
+                            </tr>
+                        }
+                    }
+                    else
                     {
                         <tr>
-
-                            <td><img src="~/@item.Image" style="max-width: 50px; max-height: 50px;" /></td>
-                            <td>@item.Name</td>
-                            <td>@item.Price</td>
-
-                            <td>@item.IsAvailable</td>
-                            <td>@item.ProductTypes.ProductType</td>
-
-                            <td>@item.Description</td>
-                            <td>@item.Quantity</td>
-                            <td>
-                                <partial name="_ButtonPartial" model="@item.Id" />
-                            </td>
+                            <td colspan="7">No products available</td>
                         </tr>
                     }
                 </tbody>
+
 
 
             </table>
