--- a/Areas/Admin/Views/Products/Index.cshtml
+++ b/Areas/Admin/Views/Products/Index.cshtml
@@ -27,7 +27,7 @@
                 </div>
                 <div class="col-lg-2"></div>
                 <div class="col-lg-2">
-                    <a asp-action="Create" class="btn btn-info"><i class="fas fa-plus"></i>&nbsp; Add New Product</a>
+                  @*   <a asp-action="Create" class="btn btn-info"><i class="fas fa-plus"></i>&nbsp; Add New Product</a> *@
                 </div>
             </div>
           
@@ -86,8 +86,14 @@
                  
                     <td>@item.Description</td>
                     <td>@item.Quantity</td>
-                    <td>
-                        <partial name="_ButtonPartial" model="@item.Id" />
+                    <td style="width: 150px">
+                        <div class="btn-group">
+                         
+                            <a asp-action="Details" class="btn btn-success" asp-route-id="@item.Id"><i class="fas fa-list-ul"></i></a>
+                            <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">
+                                <i class="fas fa-trash-alt"></i>
+                            </a>
+                        </div>
                     </td>
                 </tr>
             }
