Farmer Shop Setup and Design Complete

--- a/Areas/Customer/Views/Home/Detail.cshtml
+++ b/Areas/Customer/Views/Home/Detail.cshtml
@@ -361,6 +361,11 @@
                             }
 
                         </div>
+                        <div>
+                            <a class="btn btn-warning" href="@Url.Action("Shop", "FarmerShop", new { area = "Farmer", shopId = @Model.SpecificProduct.FarmerShopId })">Go To Shop</a>
+
+                        </div>
+
                         <div class="product_rating">
                             <ul>
                                 <li><a href="#"><i class="zmdi zmdi-star-outline"></i></a></li>
