--- a/Areas/Farmer/Views/FarmerShop/Index.cshtml
+++ b/Areas/Farmer/Views/FarmerShop/Index.cshtml
@@ -24,7 +24,14 @@
 
                 <a asp-action="Edit" asp-controller="FarmerShop" class="btn btn-warning" asp-route-id="@Model.Id">Edit</a>
 
+                
                 <a asp-action="Delete" asp-controller="FarmerShop" class="btn btn-danger" asp-route-id="@Model.Id">Delete</a>
+
+
+
+                <a class="btn btn-warning" href="@Url.Action("Shop", "FarmerShop", new { area = "Farmer", shopId = @Model.Id })"> Product in Shop</a>
+
+            
             </div>
         </div>
         <div class="col-md-6 mt-30">
