--- a/Areas/Admin/Views/Products/Index.cshtml
+++ b/Areas/Admin/Views/Products/Index.cshtml
@@ -27,7 +27,9 @@
                 </div>
                 <div class="col-lg-2"></div>
                 <div class="col-lg-2">
-                  @*   <a asp-action="Create" class="btn btn-info"><i class="fas fa-plus"></i>&nbsp; Add New Product</a> *@
+                    @*   <a asp-action="SetDiscount" class="btn btn-info"><i class="fas fa-plus"></i>&nbsp; Set Discount</a> *@
+
+                    <a asp-action="SetDiscount" class="btn btn-info"><i class="fas fa-plus"></i>&nbsp; Set Discount</a>
                 </div>
             </div>
           
@@ -69,6 +71,7 @@
                 <th>
                     @Html.DisplayNameFor(c => c.Quantity)
                 </th>
+                <th>Action</th>
             </tr>
         </thead>
 
