--- a/Areas/Farmer/Views/Inventory/Index.cshtml
+++ b/Areas/Farmer/Views/Inventory/Index.cshtml
@@ -1,5 +1,52 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model OrganicOption.Models.InventoryItem
+
 @{
+    ViewData["Title"] = "Sales Information";
 }
+<br />
+<div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4 text-center">
+
+        <h4>@ViewData["Title"]</h4>
+        <br />
+        <h4>Total  Sold Price : @ViewBag.TotalSumPriceSold.ToString("F2")</h4>
+        <br />
+    </div>
+    <div class="col-md-4"></div>
+</div>
+
+
+@if (ViewBag.SalesInfo != null && ViewBag.SalesInfo.Count > 0)
+{
+    <div class="table-responsive">
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>Product ID</th>
+                    <th>Total Product Sold</th>
+                    <th> Quantity </th>
+                    <th>Total Price </th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in ViewBag.SalesInfo)
+                {
+                    <tr>
+                        <td>@item.ProductId</td>
+                        <td>@item.TotalItemsSold</td>
+                        <td>@item.TotalQuantitySold</td>
+                        <td>@item.TotalPriceSold.ToString("F2")</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+
+
+}
+else
+{
+    <p>No sales information available.</p>
+}
+
