--- a/Areas/Customer/Views/Home/Products.cshtml
+++ b/Areas/Customer/Views/Home/Products.cshtml
@@ -84,11 +84,11 @@
 
                             </li>
                             <li class="mega_items active">
-                                <a asp-area="" asp-controller="Home" asp-action="Products"><i class="zmdi zmdi-shopping-basket"></i> shop <i class="zmdi zmdi-caret-down"></i></a>
+                                <a asp-area="" asp-controller="Home" asp-action="Products"><i class="zmdi zmdi-shopping-basket"></i> Products <i class="zmdi zmdi-caret-down"></i></a>
                                 <div class="mega_menu">
                                     <ul class="mega_menu_inner">
                                         <li>
-                                            <a href="#">Shop Layouts</a>
+                                            <a href="#">Products Layouts</a>
                                             <ul>
                                                 <li><a href="shop-fullwidth.html">Full Width</a></li>
                                                 <li><a href="shop-fullwidth-list.html">Full Width list</a></li>
@@ -121,7 +121,8 @@
                                 </div>
                             </li>
                             <li>
-                                <a href="blog.html"><i class="zmdi zmdi-collection-music"></i> blog <i class="zmdi zmdi-caret-down"></i></a>
+                                <a asp-action="AllShop" asp-area="Farmer" asp-controller="FarmerShop"><i class="zmdi zmdi-collection-music"></i> Shop <i class="zmdi zmdi-caret-down"></i></a>
+
                                 <ul class="sub_menu pages">
                                     <li><a href="blog-details.html">blog details</a></li>
                                     <li><a href="blog-fullwidth.html">blog fullwidth</a></li>
