Modifiation to Create Rider Profile and Display All Rider

--- a/Areas/Customer/Views/UserProfile/Deshboard.cshtml
+++ b/Areas/Customer/Views/UserProfile/Deshboard.cshtml
@@ -40,6 +40,12 @@
         UserRole = "Farmer";
     }
 
+
+    if (User.IsInRole("Rider"))
+    {
+        UserRole = "Rider";
+    }
+
 }
 
 @inject SignInManager<IdentityUser> SignInManager
