--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -69,8 +69,8 @@
                                 <input type="checkbox" name="roles" value="Customer" /> Customer<br />
                                   <input type="checkbox" name="roles" value="Farmer" /> Farmer<br />
                                 <input type="checkbox" name="roles" value="Rider" /> Rider<br />
-                                <input type="checkbox" name="roles" value="Admin" /> Admin<br />
-                                <input type="checkbox" name="roles" value="SuperAdmin" />Super Admin<br />
+                          @*       <input type="checkbox" name="roles" value="Admin" /> Admin<br />
+                                <input type="checkbox" name="roles" value="SuperAdmin" />Super Admin<br /> *@
                             </div>
                         </div>
 
