--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -72,11 +72,44 @@
                     </div>
                     <div class="text-center mt-4">
                         <h4>Login with Other service </h4>
-                        <div class="mt-4">
-                            <a href="#" class="btn btn-danger mb-3"><i class="fa-brands fa-google"></i> Google</a>
-                            <a href="#" class="btn btn-primary mb-3"> <i class="fa-brands fa-facebook"> </i> Facebook</a>
-                            <a href="#" class="btn btn-success mb-3"> <i class="fa-brands fa-microsoft"></i>Microsoft </a>
-                        </div>
+                        @{
+                            if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                            {
+                                <div>
+                                    <p>
+                                        There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
+                                            article
+                                            about setting up this ASP.NET application to support logging in via external services
+                                        </a>.
+                                    </p>
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="mt-4">
+
+                                    <a href="#" class="btn btn-primary mb-3"> <i class="fa-brands fa-facebook"> </i> Facebook</a>
+                                    <a href="#" class="btn btn-success mb-3"> <i class="fa-brands fa-microsoft"></i>Microsoft </a>
+                            
+
+                                <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                                    <div>
+                                        <p>
+                                            @foreach (var provider in Model.ExternalLogins!)
+                                            {
+                                                <button type="submit" class="btn btn-primary "  name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                            }
+                                        </p>
+                                    </div>
+                                </form>
+
+                                </div>
+                            }
+                        }
+                        
+                        
+                        
+            
                     </div>
                 </div>
             </div>
@@ -86,32 +119,6 @@
 
 
 
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            @* <h4>Use another service to log in.</h4> *@
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                  
-                }
-                else
-                {
-                    <form asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
-</div>
 
 
 
