--- a/Areas/Rider/Views/Rider/Riders.cshtml
+++ b/Areas/Rider/Views/Rider/Riders.cshtml
@@ -1,9 +1,11 @@
 ﻿@model IEnumerable<OrganicOption.Models.Rider_Section.RiderModel>
 
-<h2>Rider Details</h2>
+<p class="text-center mt-10 ">All Riders</p>
 
-<table class="table">
+<table class="table mt-10 ">
+           
     <thead>
+
         <tr>
             <th>Name</th>
             <th>Age</th>
