Rider Shift End Implemented

--- a/Areas/Rider/Views/Rider/Index.cshtml
+++ b/Areas/Rider/Views/Rider/Index.cshtml
@@ -53,7 +53,8 @@
                             </div>
                             <div class="card-footer">
                                 <a asp-action="EditRider" asp-area="Rider" asp-controller="Rider" class="btn btn-warning">Edit Rider</a>
-                                <a asp-action="EditShift" asp-area="Rider" asp-controller="Rider" class="btn btn-warning">Active Shift</a>
+                                <a asp-action="EditShift" asp-area="Rider" asp-controller="Rider" class="btn btn-warning">Start Shift</a>
+                                <a asp-action="UpdateShift" asp-area="Rider" asp-controller="Rider" class="btn btn-warning">Finish Shift</a>
                             </div>
                         </div>
                     </div>
