Rider Model View Update

--- a/Areas/Rider/Views/Rider/Index.cshtml
+++ b/Areas/Rider/Views/Rider/Index.cshtml
@@ -52,10 +52,12 @@
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a asp-action="EditRider" asp-area="Rider" asp-controller="Rider" class="btn btn-warning">Edit Rider</a>
-                                <a asp-action="EditShift" asp-area="Rider" asp-controller="Rider" class="btn btn-warning">Start Shift</a>
-                                <a asp-action="UpdateShift" asp-area="Rider" asp-controller="Rider" class="btn btn-warning">Finish Shift</a>
+                                <a asp-action="EditRider" asp-area="Rider" asp-controller="Rider" class="btn btn-primary">Edit Rider</a>
+                                <a asp-action="EditShift" asp-area="Rider" asp-controller="Rider" class="btn btn-success">Start Shift</a>
+                                <a asp-action="UpdateShift" asp-area="Rider" asp-controller="Rider" class="btn btn-danger">Finish Shift</a>
                             </div>
+
+                            <a asp-action="MyOffer" asp-area="Customer" asp-controller="Order" class="btn btn-warning"> Go for Deleary</a>
                         </div>
                     </div>
                 }
