--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -12613,3 +12613,20 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 /*portfolio page css end*/
 
 /*# sourceMappingURL=style.css.map */
+
+/*notification controller*/
+
+.notification-icon {
+    position: relative;
+    display: inline-block;
+}
+
+.notification-icon .badge {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 5px;
+}
