--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,12 +22,19 @@
     string userId = UserManager.GetUserId(User);
 }
 
-@inject OrganicOption.Service.NotificationService notificationService 
+
+
+@inject OrganicOption.Service.NotificationService notificationService
 
 @{
-    var unreadCount = notificationService.GetUnreadNotifications().Count();
-}
+   
+    var unreadCount = 0;
 
+    if (userId != null)
+    {
+        unreadCount = notificationService.GetUnreadNotifications(userId).Count();
+    }
+}
 
 <!DOCTYPE html>
 <html>
@@ -72,9 +79,11 @@
                                 }
                                 @if (userRole == "Customer")
                                 {
-                                    <li><a asp-area="Customer" asp-controller="Order" asp-action="UserOrders"><i class="fa-solid fa-suitcase"></i> My Orders</a></li>
+                                   
+                                    <li class="nav-item"> <a asp-area="Customer" asp-controller="Home" asp-action="Cart"><i class="fas fa-shopping-cart"></i> (@count) Cart</a></li>
+                                
                                 }
-                                <li class="nav-item"> <a asp-area="Customer" asp-controller="Home" asp-action="Cart"><i class="fas fa-shopping-cart"></i> (@count) Cart</a></li>
+                               
 
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" href="Customer/Notifications/Latest">
