Farmer Order Notification Modifications

--- a/Areas/Customer/Views/Notifications/Latest.cshtml
+++ b/Areas/Customer/Views/Notifications/Latest.cshtml
@@ -12,6 +12,5 @@
 </ul>
 
 
-<form method="post" action="/Notifications">
-    <button type="submit" class="btn btn-danger">Sell All Notification</button>
-</form>
+
+<a asp-area="Customer" asp-controller="Notifications" class="btn btn-danger" asp-action="Index"> All Notifications</a>
