Farmer Oder accepted by rider

--- a/Areas/Customer/Views/Notifications/Index.cshtml
+++ b/Areas/Customer/Views/Notifications/Index.cshtml
@@ -35,6 +35,4 @@
 </table>
 
 
-<form method="post" action="/Notifications/ClearAllNotifications">
-    <button type="submit" class="btn btn-danger">Clear All Notifications</button>
-</form>
+<a asp-area="Customer" asp-controller="Notifications" asp-action="ClearAllNotifications" class="btn btn-danger"> Clear Notification</a>
